--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="/img/new-year-sock.png" alt="sock image here" />
+                  <img src="./img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="/img/new-year-sock.png" alt="sock image here" />
+                  <img src="./img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="/img/new-year-sock.png" alt="sock image here" />
+                  <img src="./img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
