--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <div class="tabs-nav f-sb">
               <div>
                 <a class="tabs-nav__img" href="#tab-1"
-                  ><img src="/img/new-year-sock 1.png" alt="sock image here"
+                  ><img src="./img/new-year-sock 1.png" alt="sock image here"
                 /></a>
               </div>
               <div>
                 <a class="tabs-nav__img" href="#tab-2"
-                  ><img src="/img/caps-2.png" alt="cap image here"
+                  ><img src="./img/caps-2.png" alt="cap image here"
                 /></a>
               </div>
               <div>
                 <a class="tabs-nav__img" href="#tab-3"
-                  ><img src="/img/new-year-bag 1.png" alt="bag image here"
+                  ><img src="./img/new-year-bag 1.png" alt="bag image here"
                 /></a>
               </div>
             </div>
