--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
       </div>
     </header>
-    <section id="hero" class="hero scroll">
+    <section id="hero" class="hero">
       <div class="santa"></div>
       <div id="cloud" class="cloud">
         <p>How how how !!!</p>
@@ -65,7 +65,7 @@
         </div>
       </div>
     </section>
-    <section id="prod" class="present scroll">
+    <section id="prod" class="present">
       <div class="container">
         <div id="tabs" class="content f-sb">
           <div class="col">
@@ -76,17 +76,17 @@
             <div class="tabs-nav f-sb">
               <div>
                 <a class="tabs-nav__img" href="#tab-1"
-                  ><img src="./img/new-year-sock 1.png" alt="sock image here"
+                  ><img src="/img/new-year-sock 1.png" alt="sock image here"
                 /></a>
               </div>
               <div>
                 <a class="tabs-nav__img" href="#tab-2"
-                  ><img src="./img/caps-2.png" alt="cap image here"
+                  ><img src="/img/caps-2.png" alt="cap image here"
                 /></a>
               </div>
               <div>
                 <a class="tabs-nav__img" href="#tab-3"
-                  ><img src="./img/new-year-bag 1.png" alt="bag image here"
+                  ><img src="/img/new-year-bag 1.png" alt="bag image here"
                 /></a>
               </div>
             </div>
@@ -102,7 +102,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="./img/new-year-sock.png" alt="sock image here" />
+                  <img src="/img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="./img/new-year-sock.png" alt="sock image here" />
+                  <img src="/img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   </p>
                 </div>
                 <div class="tabs-item__img">
-                  <img src="./img/new-year-sock.png" alt="sock image here" />
+                  <img src="/img/new-year-sock.png" alt="sock image here" />
                 </div>
               </div>
             </div>
@@ -138,7 +138,7 @@
         </div>
       </div>
     </section>
-    <section id="cont" class="contact scroll">
+    <section id="cont" class="contact">
       <div class="container">
         <div class="content">
           <div class="title">
