--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </p>
                   </div>
                   <div class="tabs-item__img">
-                    <img src="/img/new-year-sock.png" alt="sock image here" />
+                    <img src="./img/new-year-sock.png" alt="sock image here" />
                   </div>
                 </div>
               </div>
@@ -120,7 +120,7 @@
                     </p>
                   </div>
                   <div class="tabs-item__img">
-                    <img src="/img/new-year-sock.png" alt="sock image here" />
+                    <img src="./img/new-year-sock.png" alt="sock image here" />
                   </div>
                 </div>
               </div>
@@ -135,7 +135,7 @@
                     </p>
                   </div>
                   <div class="tabs-item__img">
-                    <img src="/img/new-year-sock.png" alt="sock image here" />
+                    <img src="./img/new-year-sock.png" alt="sock image here" />
                   </div>
                 </div>
               </div>
